<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="250dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="5dp"
    android:elevation="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarCard"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/rounded" />

        <TextView
            android:id="@+id/nameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name"
            android:textColor="@color/pureBlack"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/usernameCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarCard"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/username"
            android:textColor="@color/pureBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/repoCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarCard"
            app:layout_constraintTop_toBottomOf="@+id/nameCard"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/repoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/repo"
            android:textColor="@color/pureBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/followerCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarCard"
            app:layout_constraintTop_toBottomOf="@+id/usernameCard"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/followerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/followers"
            android:textColor="@color/pureBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/followingCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarCard"
            app:layout_constraintTop_toBottomOf="@+id/repoCard"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/followingCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/following"
            android:textColor="@color/pureBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>