<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/name"
                    android:textColor="@color/pureWhite"
                    android:textSize="20sp"
                    app:layout_collapseMode="parallax"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/username"
                    android:textColor="@color/pureWhite"
                    android:textSize="16sp"
                    app:layout_collapseMode="parallax"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/location"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_location_on"
                        app:layout_collapseMode="parallax"/>

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/location"
                        android:textColor="@color/pureWhite"
                        android:textSize="18sp"
                        app:layout_collapseMode="parallax"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/company"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_action_work"
                        app:layout_collapseMode="parallax"/>

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/company"
                        android:textColor="@color/pureWhite"
                        android:textSize="18sp"
                        app:layout_collapseMode="parallax"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="5dp"
                        android:text="@string/repo"
                        android:textColor="@color/pureWhite"
                        android:textSize="12sp"
                        app:layout_collapseMode="parallax"/>

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="5dp"
                        android:text="@string/followers"
                        android:textColor="@color/pureWhite"
                        android:textSize="12sp"
                        app:layout_collapseMode="parallax"/>

                    <TextView
                        android:id="@+id/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="5dp"
                        android:text="@string/following"
                        android:textColor="@color/pureWhite"
                        android:textSize="12sp"
                        app:layout_collapseMode="parallax"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.Design.TabLayout"
                app:layout_collapseMode="pin"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextColor="@color/pureWhite" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_favorite_off"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>